@@ -1,6 +1,6 @@
-(defproject no.andante.george/george-application  "2019.1-SNAPSHOT"
+(defproject no.andante.george/george-application  "2019.2-SNAPSHOT"
 
-  :description         "George - Application"
+  :description         "George - the main application code"
   :url                 "https://bitbucket.org/andante-george/george-application"
   :license             {:name "Eclipse Public License"
                         :url  "http://www.eclipse.org/legal/epl-v10.html"}
@@ -61,7 +61,9 @@
                         ;; https://www.eclipse.org/jetty
                         [org.eclipse.jetty/jetty-server "9.0.0.v20130308"]
                         ;; https://github.com/cemerick/pomegranate
-                        [com.cemerick/pomegranate "1.1.0"]]
+                        [com.cemerick/pomegranate "1.1.0"]
+                        ;; https://github.com/kumarshantanu/lein-exec
+                        [lein-exec "0.3.7"]]
 
   :repositories        [;; junique
                         ["github-terjedahl-junique"
@@ -190,6 +192,9 @@
 
                                      :resource-paths    ["src_dev/rsc"]
 
+                                     ;; https://github.com/technomancy/leiningen/wiki/Faster
+                                     :jvm-opts ["-Xverify:none"]
+
                                      :dependencies      [;; Not required, but included here (also) for IDE support
 
                                                          [selmer "1.12.5"]
@@ -202,7 +207,11 @@
                                                          [org.openjfx/javafx-fxml     "11.0.2"]
                                                          [org.openjfx/javafx-swing    "11.0.2"]
                                                          [org.openjfx/javafx-web      "11.0.2"]
-                                                         [org.openjfx/javafx-media    "11.0.2"]]}
+                                                         [org.openjfx/javafx-media    "11.0.2"]]
+
+                                     :build {:properties {;; You may want to override this in your profiles.clj
+                                                          ;; (as :dev-overrides, not :dev or :dev-common)
+                                                          :app "George-DEV"}}}
 
                         :uberjar {;; Is applied by 'uberjar' TODO: Investigate: Doesn't seem to have any effect.
                                   :target-path "target/uberjar/"
